-Ticket #2549
git-svn-id: https://subversion.assembla.com/svn/mdss@6675 e0e46c49-be69-4f5a-ad62-21024a331aea

Former-commit-id: d37633400d07a05943b03a62e35fc12441b32f55 [formerly 058f7cafbaf3e39bad95a46a691bed8bb5d092af]
Former-commit-id: 94f709b9e0087ed921cf27b6b23e47e6c4a4baed